; ModuleID = '/home/carl/AnghaBench/h2o/deps/hiredis/examples/extr_example-macosx.c_disconnectCallback.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/hiredis/examples/extr_example-macosx.c_disconnectCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@REDIS_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"Error: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Disconnected...\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disconnectCallback(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @REDIS_OK, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %17

13:                                               ; preds = %2
  %14 = call i32 (...) @CFRunLoopGetCurrent()
  %15 = call i32 @CFRunLoopStop(i32 %14)
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %13, %8
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @CFRunLoopStop(i32) #1

declare dso_local i32 @CFRunLoopGetCurrent(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
